--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
         <div id="app">
             <div class="converter">
                 <h2>Dec to hex</h2>
-                <form action="">
+                <form name="form_dec_hex" onsubmit="return handlers.dec_hex()">
                             
                     <input type="number" name="decimalinput" id="decimalinput" max="1000000">
                     <button type="submit" title="convert">🔃</button>
                 </form>
-                <div class="display" id="hex_display">result</div>
+                <div class="display" id="hex_display">res</div>
 
             </div>
 
             <div class="converter">
                 <H2>Hex to dec</H2>
-                <div class="display" id="userInputDisplay"></div>
+                <form action="" id="hextodecForm" onsubmit="return handlers.hex_dec()">
+                        <input type="text" class="display" id="userInputDisplay">
+                        <button type="submit" title="convert">🔃</button>
+                        <button type="reset" title="clear" value="Reset">❌</button>
+                </form>
+                
                 <div class="display" id="dec_display">result</div>
                 <div id="numpad">
                     <button class="numeral" title="0">ʘ</button>
