--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="display" id="dec_display">result</div>
                 <div id="numpad">
                     <button class="numeral" title="0">ʘ</button>
-                    <button class="numeral" title="1">ר</button>
-                    <button class="numeral" title="2">ᴝ</button>
-                    <button class="numeral" title="3">ᴟ</button>
-                    <button class="numeral" title="4">ʁ</button>
+                    <button class="numeral" title="1">I</button>
+                    <button class="numeral" title="2">Ȥ</button>
+                    <button class="numeral" title="3">Ӡ</button>
+                    <button class="numeral" title="4">Я</button>
                     <button class="numeral" title="5">V</button>
                     <button class="numeral" title="6">И</button>
                     <button class="numeral" title="7">Ł</button>
@@ -48,9 +48,9 @@
                     <button class="numeral" title="10">X</button>
                     <button class="numeral" title="11">Б</button>
                     <button class="numeral" title="12">Ç</button>
-                    <button class="numeral" title="treize">Ð</button>
-                    <button class="numeral" title="catorze">Є</button>
-                    <button class="numeral" title="quinze">Ғ</button>
+                    <button class="numeral" title="13">Ð</button>
+                    <button class="numeral" title="14">Є</button>
+                    <button class="numeral" title="15">Ғ</button>
                 </div>
             </div>
             
