--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>New Hex Numerals</title>
+    <title>New Hex</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>NEW HEX NUMERALS</header>
+    <header>YOUR HEX</header>
     
     <main>
-        <H1>Decimal/Hexadecimal Converters</H1>
+        <H1>Converters</H1>
         <div id="app">
             <div class="converter">
                 <h2>Dec to hex</h2>
